// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/PostFlagIcon should match snapshot 1`] = `
<OverlayTrigger
  className="hidden-xs"
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkey"
  overlay={
    <Tooltip
      className="hidden-xs"
      id="flagTooltip"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Save Message"
        id="flag_post.flag"
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    aria-label="save"
    className="post-menu__item"
    id="CENTER_flagIcon_post_id"
    onClick={[Function]}
  >
    <FlagIcon
      className="icon icon--small"
    />
  </button>
</OverlayTrigger>
`;

exports[`components/post_view/PostFlagIcon should match snapshot 2`] = `
<OverlayTrigger
  className="hidden-xs"
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkeyflagged"
  overlay={
    <Tooltip
      className="hidden-xs"
      id="flagTooltip"
    >
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Remove from Saved"
        id="flag_post.unflag"
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    aria-label="remove from saved"
    className="post-menu__item"
    id="CENTER_flagIcon_post_id"
    onClick={[Function]}
  >
    <FlagIconFilled
      className="icon icon--small icon--small-filled post-menu__item--selected"
    />
  </button>
</OverlayTrigger>
`;
